--- a/maincss.css
+++ b/maincss.css
@@ -10,11 +10,21 @@ body{
      padding-bottom: 5px;
 
  }
-table{
+#tab1{
     text-align: center;
     border: 1px;
-    margin-left: 40%;
-     margin-right: 40%;
+    margin-left: 30%;
+   margin-right:30%;
+ }
+#tab2{
+margin-left: 30%;
+margin-right:30%;
+}
+#tab3{
+    text-align: center;
+    border: 1px;
+    margin-left: 30%;
+   margin-right:30%;
  }
 td{
     text-align: center;
