--- a/calc-beta/maincss1.css
+++ b/calc-beta/maincss1.css
@@ -21,11 +21,37 @@
             padding: 5px 0px;
 
         }
+        #a1{
+            background-color:#E5ECF3;
+            color: black;
+            border:1.5px solid #a2bbd4;
+            height:40px;
+            width:55px;
+            border-radius: 3px;
+            display: inline-block;
+            display: table-cell;
+            vertical-align: middle;
+            padding: 5px 0px;
+            font-weight: bold;
+
+        }
         #b{
             background-color:#aec0d3;
            border:1px solid #a2bbd4;
             height:40px;
             width:55px;
+            border-radius: 3px;
+            display: inline-block;
+            display: table-cell;
+            vertical-align: middle;
+            padding: 5px 0px;
+        }
+         #b1{
+            background-color:#416891;
+           border:1px solid #a2bbd4;
+            height:40px;
+            width:55px;
+            color: white;
             border-radius: 3px;
             display: inline-block;
             display: table-cell;
